<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FraseDetailActivity">

    <TextView
        android:id="@+id/textFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="125dp"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAutor"
        tools:text="Frase" />

    <TextView
        android:id="@+id/textAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="40dp"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/textFrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textId"
        tools:text="@string/textAutor" />

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="40dp"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toTopOf="@+id/textAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/textId" />

    <TextView
        android:id="@+id/identificadorId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:clickable="false"
        android:text="@string/identificadorId"
        android:textColor="@color/Teal"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/identificadorFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:clickable="false"
        android:text="@string/identificadorFrase"
        android:textColor="@color/Teal"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textFrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/identificadorAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:clickable="false"
        android:text="@string/identificadorAutor"
        android:textColor="@color/Teal"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/speakLogo"
        app:layout_constraintBottom_toTopOf="@+id/textId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/speak" />

</androidx.constraintlayout.widget.ConstraintLayout>